// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input component > Renders checkbox input in error state 1`] = `
<div class="pdap-input pdap-input-checkbox pdap-input-error">
  <input class="pdap-input-checkbox" id="test-checked" name="testCheckbox" type="checkbox">
  <div class="pdap-input-error-message" id="pdap-testCheckbox-input-error">error message</div>
  <label class="pdap-input-label" for="test-checked">test this checkbox input</label>
</div>
`;

exports[`Input component > Renders checkbox input in okay state 1`] = `
<div class="pdap-input pdap-input-checkbox">
  <input class="pdap-input-checkbox" id="test-checked" name="testCheckbox" type="checkbox">
  <!--v-if-->
  <label class="pdap-input-label" for="test-checked">test this checkbox input</label>
</div>
`;

exports[`Input component > Renders password input in error state 1`] = `
<div class="pdap-input pdap-input-password pdap-input-error">
  <input id="test-text" name="testText" placeholder="This is testing testing" type="password">
  <div class="pdap-input-error-message" id="pdap-testText-input-error">error message</div>
  <label class="pdap-input-label" for="test-text">test this text input</label>
</div>
`;

exports[`Input component > Renders password input in okay state 1`] = `
<div class="pdap-input pdap-input-password">
  <input id="test-text" name="testText" placeholder="This is testing testing" type="password">
  <!--v-if-->
  <label class="pdap-input-label" for="test-text">test this text input</label>
</div>
`;

exports[`Input component > Renders text input in error state 1`] = `
<div class="pdap-input pdap-input-text pdap-input-error">
  <input id="test-text" name="testText" placeholder="This is testing testing" type="text">
  <div class="pdap-input-error-message" id="pdap-testText-input-error">error message</div>
  <label class="pdap-input-label" for="test-text">test this text input</label>
</div>
`;

exports[`Input component > Renders text input in okay state 1`] = `
<div class="pdap-input pdap-input-text">
  <input id="test-text" name="testText" placeholder="This is testing testing" type="text">
  <!--v-if-->
  <label class="pdap-input-label" for="test-text">test this text input</label>
</div>
`;
